--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -26,7 +26,10 @@
     "@nestjs/schedule": "^6.0.0",
     "@types/minimatch": "^6.0.0",
     "axios": "^1.10.0",
+    "better-sqlite3": "^12.2.0",
     "cheerio": "^1.1.0",
+    "drizzle-orm": "^0.44.2",
+    "ioredis": "^5.6.1",
     "minimatch": "^10.0.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
@@ -39,10 +42,12 @@
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
