few fixes + trying to do mobile!

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -17,6 +17,7 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false,
-    "skipDefaultLibCheck": true
+    "skipDefaultLibCheck": true,
+    "resolveJsonModule": true
   }
 }
