--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -24,11 +24,13 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/schedule": "^6.0.0",
+    "@nestjs/swagger": "^11.2.0",
     "@types/minimatch": "^6.0.0",
     "axios": "^1.10.0",
     "better-sqlite3": "^12.2.0",
     "cheerio": "^1.1.0",
     "drizzle-orm": "^0.44.2",
+    "firebase-admin": "^13.4.0",
     "ioredis": "^5.6.1",
     "minimatch": "^10.0.3",
     "reflect-metadata": "^0.2.2",
